# psip

./: .dockerignore  .gitignore  Dockerfile  README.md  TECHNICAL_INVENTORY.md  docker-compose.dev.yml  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
data/processed/: calibrated_distributions.json
docs/figures/: fig18_dashboard_network_intelligence.html  fig19_stackelberg_coverage_heatmap.html  fig20_scenario_comparison.html
manuscript/: algorithm2e.sty  siunitx.sty  sprint6_toc_preview.tex  thesis.aux  thesis.bbl  thesis.bib  thesis.blg  thesis.lof  thesis.lot  thesis.out  thesis.tex  thesis.toc
manuscript/appendices/: app_a_lp_derivation.tex  app_b_fad_tables.tex  app_c_code_listing.tex
manuscript/chapters/: abbreviations.tex  abstract.tex  acknowledgements.tex  ch1_introduction.tex  ch2_literature.tex  ch3_physics.tex  ch4_adversarial.tex  ch5_results.tex  ch6_conclusion.tex
notebooks/: phmsa_data_downloader.py  phmsa_eda_calibration.py  sprint1_physics_demo.py  sprint2_network_demo.py  sprint3_game_demo.py  sprint4_adversarial_nde_demo.py  sprint5_dashboard.py  sprint5_static_export.py
psip/: __init__.py
psip-dashboard/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
psip-dashboard/src/: App.jsx  index.css
psip-dashboard/src/api/: client.js
psip-dashboard/src/components/: AdversarialPanel.jsx  FADPanel.jsx  GamePanel.jsx  LoginForm.jsx  MCPanel.jsx  NetworkMap.jsx
psip/adversarial/: __init__.py
psip/api/: __init__.py  app.py  models.py
psip/api/auth/: __init__.py  deps.py  models.py  router.py  security.py  users.py
psip/api/routers/: adversarial.py  fad.py  game.py  mc.py  network.py
psip/fad/: __init__.py
psip/fatigue/: __init__.py
psip/game/: __init__.py
psip/mc/: __init__.py
psip/nde/: __init__.py
psip/network/: __init__.py  entsog.py
psip_core.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/dashboard/: __init__.py  callbacks.py  data_layer.py  layout.py
src/zone_a/: __init__.py  adversarial_attacks.py  nde_model.py  synthetic_data.py
tests/test_dashboard/: test_callbacks.py
tests/test_psip/: test_entsog.py
tests/test_zone_a/: test_adversarial_attacks.py  test_nde_model.py
tests/test_zone_c/: test_fad_engine.py  test_fatigue_engine.py  test_pipeline_graph.py  test_stackelberg_game.py
(+9 files in other folders)
